chore: sync docker-compose.prod.yml with docker-compose.yml (#47)

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,6 +32,17 @@ services:
 
       # Firebase 설정
       FIREBASE_KEY: ${FIREBASE_KEY:-}
+
+      # Remote JSON Load 설정
+      REMOTE_JSON_HOST: ${REMOTE_JSON_HOST}
+      REMOTE_JSON_PORT: ${REMOTE_JSON_PORT}
+      REMOTE_JSON_USER: ${REMOTE_JSON_USER}
+      REMOTE_JSON_PASS: ${REMOTE_JSON_PASS}
+      REMOTE_JSON_PATH: ${REMOTE_JSON_PATH}
+      REMOTE_N2V_WEIGHT_PATH: ${REMOTE_N2V_WEIGHT_PATH}
+      REMOTE_N2V_UTIL_PATH: ${REMOTE_N2V_UTIL_PATH}
+
+      # 서버 설정
       WORKERS: ${WORKERS:-1}
 
     depends_on:
