--- a/env.example
+++ b/env.example
@@ -55,3 +55,5 @@ REMOTE_JSON_PASS={REMOTE_JSON_PASS}
 REMOTE_JSON_PATH={REMOTE_JSON_PATH}
 REMOTE_N2V_WEIGHT_PATH={REMOTE_N2V_WEIGHT_PATH}
 REMOTE_N2V_UTIL_PATH={REMOTE_N2V_UTIL_PATH}
+
+SSH_KEY=$HOME/.ssh/yamyam_actions
