--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 
 services:
   backend:
+    image: ${DOCKERHUB_USERNAME}/yamyam-ops:${IMAGE_TAG:-latest}
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -9,7 +10,7 @@ services:
         GITHUB_TOKEN: ${GITHUB_TOKEN}
     container_name: yamyam-backend
     ports:
-      - "8000:8000"
+      - "8000"
     environment:
       # 데이터베이스 설정
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:${POSTGRES_PORT}/${POSTGRES_DB}
@@ -31,7 +32,7 @@ services:
       RUN_MIGRATIONS: ${RUN_MIGRATIONS:-false}
 
       # CORS 설정
-      ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-["http://localhost:8501", "http://localhost:3000", "http://localhost", "http://127.0.0.1:8501"]}
+      ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-["https://what2eat.streamlit.app", "http://localhost:8501", "http://localhost:3000", "http://localhost", "http://127.0.0.1:8501"]}
 
       # Firebase 설정
       FIREBASE_KEY: ${FIREBASE_KEY:-}
@@ -56,9 +57,35 @@ services:
       - ./backend:/app
       - ./data:/app/data
       - config_data:/app/config
+    networks:
+      - yamyam-network
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  nginx:
+    image: nginx:alpine
+    container_name: yamyam-nginx-prod
+    ports:
+      - "8808:8808"
+      - "443:443"
+
+    volumes:
+      - ./nginx/conf/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro  # SSL 인증서 디렉토리
+      - nginx_logs:/var/log/nginx
+      - ./data:/app/data
+
+    depends_on:
+      - backend
+    networks:
+      - yamyam-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-fL", "http://localhost:8808/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -74,7 +101,11 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./postgres/init:/docker-entrypoint-initdb.d
     ports:
-      - "5432:5432"
+      - "15477:5432"  # 외부 접근용
+      - "5477:5432"   # 내부 접근용
+    networks:
+      - yamyam-network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-yamyam} -d ${POSTGRES_DB:-yamyamdb}"]
       interval: 10s
@@ -85,9 +116,12 @@ services:
     image: redis:latest
     container_name: yamyam-redis
     ports:
-      - "6379:6379"
+      - "6379"
     volumes:
       - redis_data:/data
+    networks:
+      - yamyam-network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -98,3 +132,8 @@ volumes:
   postgres_data:
   redis_data:
   config_data:
+  nginx_logs:
+
+networks:
+  yamyam-network:
+    driver: bridge
