--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "tqdm>=4.65.0",
     "scikit-learn>=1.3.0",
     "numpy>=1.24.0",
+    "fuzzywuzzy>=0.18.0",
 ]
 
 [dependency-groups]
